# TickerSentimentTool

./: alphavantage_api.py  config.py  pyproject.toml  sentiment_analyzer.py  twitter_api.py
